Extend some MANUAL with (1).

--- a/MANUALHTML/1bai.html
+++ b/MANUALHTML/1bai.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>1bai</h2>
+<h2>1bai(1)</h2>
 <h3>【名前】</h3>
 <p><code>1bai</code> :  前0をとる</p>
 <h3>【書式】</h3>
@@ -226,7 +226,7 @@ b 98.45 100
 <p>命名の由来対象の数字の文字列に１倍を掛けることにより０を取り除くため、<code>1bai</code>と命名されています。</p>
     </div>
 
-    <div id="lastmodified">Last modified: Tue Aug  2 18:14:27 JST 2022 </div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022 </div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
