--- a/MANUALHTML/haba.html
+++ b/MANUALHTML/haba.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>haba</h2>
+<h2>haba(1)</h2>
 <h3>【名前】 </h3>
 <p><code>haba</code> :  表示幅をだす</p>
 <h3>【書式】</h3>
@@ -191,7 +191,7 @@ $ LANG=C awk '{print length($0)}' data &lt;-- バイト数がでる。
 </pre>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
