--- a/MANUALHTML/isdate.html
+++ b/MANUALHTML/isdate.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>isdate</h2>
+<h2>isdate(1)</h2>
 <h3>【名前】</h3>
 <p><code>isdate</code> :  ８桁日付のチェック</p>
 <h3>【書式】</h3>
@@ -154,7 +154,7 @@ $ echo $?
 <p>１７５２年９月は３日から１３日は存在しないが、これをエラーとはしていない。ユリウス歴からグレゴリオ歴に移行した月で差分を合わせるために日付がとんでいる。($ cal 9 1752 で確認できる)</p>
     </div>
 
-    <div id="lastmodified">Last modified: Thu Aug 11 10:29:11 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
