--- a/MANUALHTML/join1x.html
+++ b/MANUALHTML/join1x.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>join1x(USP)</h2>
+<h2>join1x(1)</h2>
 <h3>【名前】</h3>
 <p><code>join1x</code> :  キーの値が同じレコードが複数存在するファイル同士を連結。</p>
 <h3>【書式】</h3>
@@ -179,7 +179,7 @@ $ cat data
 </pre>
     </div>
 
-    <div id="lastmodified">Last modified: Thu Aug 11 10:32:40 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
