--- a/MANUALHTML/man2.html
+++ b/MANUALHTML/man2.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>man2(USP)</h2>
+<h2>man2(1)</h2>
 <h3>【名前】</h3>
 <p><code>man2</code> :  USP コマンドのマニュアル表示</p>
 <h3>【書式】</h3>
