--- a/MANUALHTML/selr.html
+++ b/MANUALHTML/selr.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>selr(1</h2>
+<h2>selr(1)</h2>
 <h3>【名前】</h3>
 <p><code>selr</code> :  フィールドが完全一致した行を出力する</p>
 <h3>【書式】</h3>
@@ -169,7 +169,7 @@ Edition : 1
 <p><a href="delr.html" class="command">delr(1)</a></p>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 16:46:59 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
