--- a/MANUALHTML/block_getlast.html
+++ b/MANUALHTML/block_getlast.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>block_getlast</h2>
+<h2>block_getlast(1)</h2>
 <h3>【名前】</h3>
 <p><code>block_getlast</code> :  同一キーをもつレコードから、参照キーが同じ最終 ブロックをすべて出力する</p>
 <h3>【書式】</h3>
@@ -172,7 +172,7 @@ $ cat result
 </pre>
     </div>
 
-    <div id="lastmodified">Last modified: Wed Aug  3 07:10:40 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
