--- a/MANUALHTML/check_date_name.html
+++ b/MANUALHTML/check_date_name.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>check_date_name</h2>
+<h2>check_date_name(1)</h2>
 <h3>【名前】</h3>
 <p><code>check_date_name</code> :  name 形式データの日付をチェックする</p>
 <h3>【書式】</h3>
@@ -163,7 +163,7 @@ $ echo $?
 </pre>
     </div>
 
-    <div id="lastmodified">Last modified: Thu Jul 28 14:18:59 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
