--- a/MANUALHTML/check_inlist_name.html
+++ b/MANUALHTML/check_inlist_name.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>check_inlist_name</h2>
+<h2>check_inlist_name(1)</h2>
 <h3>【名前】</h3>
 <p><code>check_inlist_name</code> :  name 形式データのリスト内存在チェックをする</p>
 <h3>【書式】</h3>
@@ -200,7 +200,7 @@ C list2
 </pre>
     </div>
 
-    <div id="lastmodified">Last modified: Thu Aug  4 17:27:11 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
