--- a/MANUALHTML/ulock.html
+++ b/MANUALHTML/ulock.html
@@ -128,7 +128,7 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>ulock</h2>
+<h2>ulock(1)</h2>
 <h3>【名前】</h3>
 <p><code>ulock</code> :  排他制御コマンド</p>
 <h3>【書式】</h3>
@@ -189,7 +189,7 @@ ulock -r lock counter cat master
 <p><code>lock-file</code>、<code>counter-file</code>とも<code>NFS</code>上に作成すれば、各サーバーからのリードライトロックが実現します。</p>
     </div>
 
-    <div id="lastmodified">Last modified: Tue Aug  9 17:26:35 JST 2022</div>
+    <div id="lastmodified">Last modified: Fri Aug 12 12:56:05 JST 2022</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
